--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,6 @@ output:
   html_document:
     toc: true
     toc_float: true
-    theme: cerulean
 ---
 
 # This is Ravi's awesome website
@@ -28,7 +27,8 @@ Link to useful tools for data science
 * [P8105](https://p8105.com)
 
 ## Local image
-![](images/ted.jpg)
+
+<img src="images/ted.jpg" style="width:75%">
 
 ## link to page within the site
 [About me](about.html)
